<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/patientsListFragment"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/userSettingsFragment"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/menu_settings" />

    </group>

    <item android:title="@string/menu_communicate">
        <menu>
            <item
                android:id="@+id/navShare"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
        </menu>
    </item>
</menu>
